<!--
	Copyright © Microsoft Corporation, All Rights Reserved
	
	Licensed under MICROSOFT SOFTWARE LICENSE TERMS, 
	MICROSOFT RIGHTS MANAGEMENT SERVICE SDK UI LIBRARIES;
	You may not use this file except in compliance with the License.
	See the license for specific language governing permissions and limitations.
	You may obtain a copy of the license (RMS SDK UI libraries - EULA.DOCX) at the 
	root directory of this project.
	
	THIS CODE IS PROVIDED *AS IS* BASIS, WITHOUT WARRANTIES OR CONDITIONS
	OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING WITHOUT LIMITATION
	ANY IMPLIED WARRANTIES OR CONDITIONS OF TITLE, FITNESS FOR A
	PARTICULAR PURPOSE, MERCHANTABILITY OR NON-INFRINGEMENT.
-->
<resources>
<string name="select_templates">Select templates</string>
<string name="select_template_title">Select a protection template</string>
<string name="protect">Protect</string>
<string name="protected_content">Protected content</string>
<string name="granted_by_string">Granted by</string>
<string name="use_rights_string">Use Rights</string>
<string name="ok">OK</string>
<string name="close_string">Close</string>
<string name="report">Send e-mail</string>
<string name="error_report_reporting_string">An error occurred when reporting message</string>
<string name="apply">Apply</string>
<string name="protection">Protection</string>
<string name="permissions">Permissions</string>
<string name="your_permissions">Your permissions</string>
<string name="error_report_message">You\'ve found a problem with the Windows Azure AD Rights Management SDK. Please help us improve our product by sending this e-mail.</string>
<string name="policy_viewer_non_owner_content">You have the following permissions for this file:</string>
<string name="policy_viewer_owner_content">You have set the following permissions on this file:</string>
<string name="viewer">Viewer</string>
<string name="reviewer">Reviewer</string>
<string name="co_author">Co-author</string>
<string name="co_owner">Co-owner</string>
<string name="adrms">ADRMS</string>
<string name="sdk_ver">4.0</string>
<string name="custom_permissions">Custom Permissions...</string>
<string name="edit_permissions">Edit Permissions</string>
<string name="edit">Edit</string>
<string name="remove">Remove</string>
<string name="version_code">1</string>
<string name="version_name">1.0.0.51970</string>
<string name="owner_description_string">Full Control</string>
<string name="view_description_string">View</string>
<string name="edit_description_string">Edit</string>
<string name="export_description_string">Save as</string>
<string name="extract_description_string">Copy</string>
<string name="print_description_string">Print</string>
<string name="reply_description_string">Reply</string>
<string name="reply_all_description_string">Reply All</string>
<string name="forward_description_string">Forward</string>
<string name="comment_description_string">Comment</string>
<string name="ad_hoc_policy_name_string">RESTRICTED ACCESS</string>
<string name="ad_hoc_policy_description_string">Permission is currently restricted. Only specified users can access this content</string>
<string name="no_permissions_policy_name_string">No Permissions</string>
<string name="no_protection_policy_name_string">No Protection</string>
<string name="no_protection_policy_name_string_description">This content isn\'t protected.</string>
<string name="error_reporting_consent_request_string">We\'re sorry. An error has occurred. Can you send us the error logs so we can fix the problem?</string>
<string name="error_reporting_consent_ok_button_string">OK</string>
<string name="error_reporting_consent_cancel_button_string">Cancel</string>
<string name="privacy_hyperlink">&lt;a href=\'https://go.microsoft.com/fwlink/?LinkId=317563\'&gt;Privacy&lt;/a&gt;</string>
<string name="help_hyperlink">&lt;a href=\'https://go.microsoft.com/fwlink/?LinkID=324513\'&gt;Help&lt;/a&gt;</string>
<string name="error_invalid_email_address_string">Invalid email address</string>
<string name="rms_logo_content_description">Rights Management Services</string>
<string name="email_instruction_text">Enter your organizational email address</string>
<string name="email_hint_text">someone@example.com</string>
<string name="continue_button_text">Continue</string>
<string name="customer_experience_data_consent_dialog_header">Improve RMS</string>
<string name="customer_experience_data_consent_dialog_message">Send information to help improve RMS? The information will not be used to identify or contact you.</string>
<string name="customer_experience_data_consent_dialog_positive_button_txt">Yes</string>
<string name="customer_experience_data_consent_dialog_negative_button_txt">No Thanks</string>
<string name="customer_experience_data_consent_dialog_neutral_button_txt">Learn more</string>
<string name="learn_more_uri">https://go.microsoft.com/fwlink/?LinkId=317563</string>
<string name="document_tracking_consent_message">Use of documents that are protected by Microsoft Rights Management might be tracked by the sender and/or by their organization\'s IT administrator</string>
<string name="service_url_consent_messsage">By clicking Accept, you authorize this application to connect to the following services:</string>
<string name="dont_show_again_checkbox_text">Don\'t show this message again</string>
<string name="cancel">Cancel</string>
<string name="accept">Accept</string>
</resources>
